--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class='row'>
-            <div class='col-md-6' *ngIf='listFilter != ""'>
+            <div class='col-md-6' *ngIf='listFilter'>
                 <h4>Filtered by: {{listFilter}}</h4>
             </div>
         </div>
@@ -45,7 +45,7 @@
                         <td>{{product.productCode | lowercase | convertToSpaces:'-'}}</td>
                         <td>{{product.releaseDate}}</td>
                         <td>{{product.price | currency:'CHF '}}</td>
-                        <td>{{product.starRating}}</td>
+                        <td><pm-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star></td>
                     </tr>
                 </tbody>
             </table>
